Added additional auth scope, made login less complicated.

--- a/other/var.env
+++ b/other/var.env
@@ -1,3 +1,3 @@
 SPOTIPY_CLIENT_ID='66880bb5822a48459696468e620a10d6'
 SPOTIPY_CLIENT_SECRET='5981fc6e6bfe469692f37f232aeabeb0'
-SPOTIPY_REDIRECT_URI='https://127.0.0.1:8080'
+SPOTIPY_REDIRECT_URI='http://127.0.0.1:8080'
